2007-07-06  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/JFreeChart.java
	(DEFAULT_BACKGROUND_PAINT): Changed to Color.WHITE,
	* source/org/jfree/chart/plot/CategoryPlot.java
	(DEFAULT_GRIDLINE_PAINT): Likewise,
	(CategoryPlot): Changed default axis offset,
	* source/org/jfree/chart/plot/Plot.java
	(DEFAULT_BACKGROUND_PAINT): Changed to Color.LIGHT_GRAY,
	* source/org/jfree/chart/plot/ThermometerPlot.java
	(ThermometerPlot): Override default background paint,
	* source/org/jfree/chart/plot/XYPlot.java
	(DEFAULT_BACKGROUND_PAINT): Changed to Color.LIGHT_GRAY,
	(XYPlot): Changed default axis offset.

2007-07-06  David Gilbert  <david.gilbert@object-refinery.com>

	* source/org/jfree/chart/annotations/CategoryAnnotation.java
	(draw): Added 'rendererIndex' and 'info' parameters,
	* source/org/jfree/chart/annotations/CategoryLineAnnotation.java
	(draw): Likewise,
	* source/org/jfree/chart/annotations/CategoryTextAnnotation.java
	(draw): Likewise,
	* source/org/jfree/chart/plot/CategoryPlot.java
	(draw): Added code to draw background and foreground annotations in the
	renderer(s),
	(drawAnnotations): Updated for CategoryAnnotation interface API change,
	* source/org/jfree/chart/renderer/category/AbstractCategoryItemRenderer.java
	(backgroundAnnotations): New field,
	(foregroundAnnotations): Likewise,
	(AbstractCategoryItemRenderer): Initialise new fields,
	(addAnnotation(CategoryAnnotation)): New method,
	(addAnnotation(CategoryAnnotation, Layer)): Likewise,
	(removeAnnotation(CategoryAnnotation)): Likewise,
	(removeAnnotations): Likewise,
	(equals): Updated for new fields,
	(drawAnnotations): New method,
	* source/org/jfree/chart/renderer/category/CategoryItemRenderer.java
	(addAnnotation(CategoryAnnotation)): New method,
	(addAnnotation(CategoryAnnotation, Layer)): Likewise,
	(removeAnnotation(CategoryAnnotation)): Likewise,
	(removeAnnotations): Likewise,
	(drawAnnotations): Likewise.
