@@ -1,5 +1,11 @@
 2007-07-06  David Gilbert  <david.gilbert@object-refinery.com>
 
+	* source/org/jfree/chart/entity/AxisLabelEntity.java
+	(AxisLabelEntity): Assign axis argument,
+	(toString): New method override.
+
+2007-07-06  David Gilbert  <david.gilbert@object-refinery.com>
+
 	* source/org/jfree/chart/JFreeChart.java
 	(DEFAULT_BACKGROUND_PAINT): Changed to Color.WHITE,
 	* source/org/jfree/chart/plot/CategoryPlot.java
